// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Status renders correctly when step is getstarted 1`] = `
<Fragment>
  <GetStarted />
</Fragment>
`;

exports[`Status renders correctly when step is inprogress 1`] = `
<Fragment>
  <GetStarted />
</Fragment>
`;

exports[`Status renders correctly when step is pending 1`] = `
<Fragment>
  <Pending />
</Fragment>
`;

exports[`Status renders correctly when step is rejected 1`] = `
<Fragment>
  <Rejected />
</Fragment>
`;

exports[`Status renders correctly when step is underreview 1`] = `
<Fragment>
  <UnderReview />
</Fragment>
`;
